Enhance MobileFilters styles: add z-index to ensure proper stacking context for mobile filters on the HomePage.

--- a/src/pages/HomePage/components/MobileFilters/MobileFilters.module.scss
+++ b/src/pages/HomePage/components/MobileFilters/MobileFilters.module.scss
@@ -3,6 +3,7 @@
 
 .mobileFilters {
   top: 9rem;
+  z-index: 100;
   flex-wrap: wrap;
   position: sticky;
   gap: $spacing-xsmall;
